--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 # for local development
 version: '3.7'
 services:
-  todo:
+  todo-frontend:
     container_name: todo-frontend
     image: node:14.15.0
     working_dir: /app
